# k8s-lab-status

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/k8s_lab_status/: checker.py  config.py  main.py  metrics.py
tests/: test_app.py
